tests/lit/errors/self_member.tea
// RUN: not %tlang %s 2>&1 | %FileCheck %s

// CHECK: unknown type name

X: type = {
    self: X
}